--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@
 PORT=3000
 API_PREFIX = api
 API_VERSION = v1
+
+AWS_REGION = ap-south-1
+TABLE_NAME = Users
+
+ACCESS_SECRET = 58hwe467857w83456
+REFRESH_SECRET = 8jt456e487568fe47568347n85
