added a environment file

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ PORT=3000
 API_PREFIX = api
 API_VERSION = v1
 
-AWS_REGION = ap-south-1
-TABLE_NAME = Users
+AWS_REGION = <-aws region->
+TABLE_NAME = <-Table name->
 
-ACCESS_SECRET = 58hwe467857w83456
-REFRESH_SECRET = 8jt456e487568fe47568347n85
+ACCESS_SECRET = <-some random string->
+REFRESH_SECRET = <-some random string->
