refactor(var): env var

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ API_VERSION = v1
 
 AWS_REGION = <-aws region->
 TABLE_NAME = <-Table name->
+AWS_SECRET = <-some random string->
+AWS_ACCESS_KEY = <-some random string->
 
 ACCESS_SECRET = <-some random string->
 REFRESH_SECRET = <-some random string->
