refactor: added expires time

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ AWS_ACCESS_KEY = <-some random string->
 
 ACCESS_SECRET = <-some random string->
 REFRESH_SECRET = <-some random string->
+EXPIRE_ACCESS_TIME = <-Time in minutes->
+EXPIRE_REFRESH_TIME = <-Time in minutes->
