refactor: added twilio variables

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ ACCESS_SECRET = <-some random string->
 REFRESH_SECRET = <-some random string->
 EXPIRE_ACCESS_TIME = <-Time in minutes->
 EXPIRE_REFRESH_TIME = <-Time in minutes->
+
+ACCOUNT_SID = <-your Twilio account sid->
+AUTH_TOKEN = <-Twilio auth token->
+TWILIO_NUMBER = <-Twilio phone number->
