--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ REFRESH_SECRET = <-some random string->
 EXPIRE_ACCESS_TIME = <-Time in minutes->
 EXPIRE_REFRESH_TIME = <-Time in minutes->
 
+REDIS_EXPIRATION_TIME = <-Time in minutes->
+
 ACCOUNT_SID = <-your Twilio account sid->
 AUTH_TOKEN = <-Twilio auth token->
 TWILIO_NUMBER = <-Twilio phone number->
